--- a/app/views/todolists/new.html.erb
+++ b/app/views/todolists/new.html.erb
@@ -1,10 +1,11 @@
 <!--このファイルは投稿フォームの「データの入力のみ」を担当している。-->
 <h1>新規投稿</h1>
+
 <!-- form_with部分 -->
 <%= form_with model: @list, url:'/todolists', local:true do |f| %>
   <h4>タイトル</h4>
-  <%= f.text_field :title %>
+  <%= f.text_field :title %> <!--title→カラム名-->
   <h4>本文</h4>
-  <%= f.text_area :body %>
+  <%= f.text_area :body %>　<!--body→カラム名-->
   <%= f.submit '投稿' %>
 <% end %>
