--- a/app/views/todolists/index.html.erb
+++ b/app/views/todolists/index.html.erb
@@ -1,10 +1,10 @@
 <h1>投稿一覧</h1>
 <% @lists.each do |list| %>
   <p>タイトル</p>
-  <!--<span><%= list.title %></span> を削除,変更 -->
-  <!--<span><%= link_to list.title, "/todolists/#{list.id}" %></span>-->
-  <!--「link_to」がHTML上で<a>タグの仕事をしている。-->
+      <!--削除した<span><%= list.title %></span> -->
+      <!--削除した<span><%= link_to list.title, "/todolists/#{list.id}" %></span>-->
   <span><%= link_to list.title, todolist_path(list.id) %></span>
-  <!--引数でidをしていする書き方もある(list)でも大丈夫。-->
+  <!--「link_to」はHTML上で<a>タグの仕事をしている。-->
+  <!--引数でidを指定する書き方もある(list)でも大丈夫。-->
 <% end %>
 
