--- a/app/views/todolists/show.html.erb
+++ b/app/views/todolists/show.html.erb
@@ -1,5 +1,9 @@
 <h2>タイトル</h2>
 <p><%= @list.title %></p> <!--title→カラム名-->
+
 <h2>本文</h2>
 <p><%= @list.body %></p> <!--body→カラム名-->
 <!--@listにデータが1件、格納されている。-->
+
+<%= link_to "編集", edit_todolist_path(@list.id) %>
+<!--「link_to」はHTMLの<a>タグ。詳細表示画面に編集画面の呼び出しをしている。-->
