--- a/app/views/todolists/new.html.erb
+++ b/app/views/todolists/new.html.erb
@@ -9,5 +9,8 @@
   <h4>本文</h4>
   <%= f.text_area :body %>　<!--body→カラム名-->
   
+  <h4>画像</h4>
+  <%= f.attachment_field :image %>
+  
   <%= f.submit '投稿' %>
 <% end %>
