--- a/app/views/todolists/show.html.erb
+++ b/app/views/todolists/show.html.erb
@@ -5,5 +5,8 @@
 <p><%= @list.body %></p> <!--body→カラム名-->
 <!--@listにデータが1件、格納されている。-->
 
+<h2>画像</h2>
+<%= attachment_image_tag @list, :image, :fill, 300, 300, format: 'jpeg' %>
+
 <%= link_to "編集", edit_todolist_path(@list.id) %>
 <!--「link_to」はHTMLの<a>タグ。詳細表示画面に編集画面の呼び出しをしている。-->
