--- a/app/views/todolists/show.html.erb
+++ b/app/views/todolists/show.html.erb
@@ -10,3 +10,4 @@
 
 <%= link_to "編集", edit_todolist_path(@list.id) %>
 <!--「link_to」はHTMLの<a>タグ。詳細表示画面に編集画面の呼び出しをしている。-->
+<%= link_to "削除", destroy_todolist_path(@list.id), method: :delete, "data-confirm" => "本当に削除しますか？" %>
