[Add/Fix]2-10 文字を省略して表示させるCSSの修正、追加

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -83,6 +83,7 @@ main {
   display: block;
   color: gray;
   font-size: 12px;
+  overflow: hidden;
   white-space: nowrap; /*テキストを折り返し表示させないようにするプロパティ*/
   text-overflow: ellipsis; /*領域をはみ出したテキストを「...」で省略表示するプロパティ*/
 }
